[package]
name = "DPKP-Rust"
version = "0.1.0"
authors = ["Alejandro Marrero <alemarrerodiaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[dependencies]
simple-matrix = "0.1"
chrono = "0.4"
